<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="#09021C"
    android:orientation="vertical"
    tools:context=".Registro">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="243dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/imageView2"
            android:text="@string/datos_personales"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="47dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="56dp"
            app:srcCompat="@drawable/lapizestadist" />
    </RelativeLayout>


    <EditText
        android:id="@+id/editTextTextDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:hint="@string/Direccion"
        android:inputType="textPersonName"
        android:textSize="15sp"
        android:textStyle="normal" />


    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#FF9800"
        android:text="@string/btn_registrar"
        android:textSize="20dp"
        android:textStyle="bold" />

</LinearLayout>